# jfman

./: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
po/: POTFILES.in  es.gmo  es.po  jfman.pot
src/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  exparray.h  main.c  noglob.c  shenv.c  shenv.h  shglob.h  support.c  support.h
